src/test/ui/async-await/issues/issue-63388-2.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-63388-2.rs:13:10
   |
LL |         foo: &dyn Foo, bar: &'a dyn Foo
   |              --------       -----------
LL |
LL |     ) -> &dyn Foo
   |          ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `foo` or `bar`
help: consider using the `'a` lifetime
   |
LL |     ) -> &'a dyn Foo
   |           ++

error[E0759]: `foo` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/issue-63388-2.rs:11:9
   |
LL |         foo: &dyn Foo, bar: &'a dyn Foo
   |         ^^^  -------- this data with an anonymous lifetime `'_`...
   |         |
   |         ...is used here...
...
LL |         foo
   |         --- ...and is required to live as long as `'static` here
   |
note: `'static` lifetime requirement introduced by the return type
  --> $DIR/issue-63388-2.rs:13:10
   |
LL |     ) -> &dyn Foo
   |          ^^^^^^^^ requirement introduced by this return type
LL |     {
LL |         foo
   |         --- because of this returned expression
help: to declare that the trait object captures data from argument `foo`, you can add an explicit `'_` lifetime bound
   |
LL |     ) -> &dyn Foo + '_
   |                   ++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0106, E0759.
For more information about an error, try `rustc --explain E0106`.
